added styling to the login page and color to the css

--- a/style.css
+++ b/style.css
@@ -2,3 +2,18 @@
 {
     width: 120px;
 }
+
+.display-4, .lead{
+
+text-align: center;
+
+}
+.jumbotron-fluid{
+background: linear-gradient(to right, white, orange);
+opacity: .9;
+
+}
+.collapse{
+
+
+}
